--- a/gRPC/Client Examples/BICgRPC_wpfLib/BICgRPC_wpfLib.csproj
+++ b/gRPC/Client Examples/BICgRPC_wpfLib/BICgRPC_wpfLib.csproj
@@ -85,7 +85,9 @@
     <Error Condition="!Exists('..\..\packages\Grpc.Core.2.46.6\build\net45\Grpc.Core.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\Grpc.Core.2.46.6\build\net45\Grpc.Core.targets'))" />
     <Error Condition="!Exists('..\..\packages\Grpc.Tools.2.59.0\build\Grpc.Tools.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\Grpc.Tools.2.59.0\build\Grpc.Tools.props'))" />
     <Error Condition="!Exists('..\..\packages\Grpc.Tools.2.59.0\build\Grpc.Tools.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\Grpc.Tools.2.59.0\build\Grpc.Tools.targets'))" />
+    <Error Condition="!Exists('..\..\packages\Google.Protobuf.Tools.3.30.2\build\Google.Protobuf.Tools.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\Google.Protobuf.Tools.3.30.2\build\Google.Protobuf.Tools.targets'))" />
   </Target>
   <Import Project="..\..\packages\Grpc.Core.2.46.6\build\net45\Grpc.Core.targets" Condition="Exists('..\..\packages\Grpc.Core.2.46.6\build\net45\Grpc.Core.targets')" />
   <Import Project="..\..\packages\Grpc.Tools.2.59.0\build\Grpc.Tools.targets" Condition="Exists('..\..\packages\Grpc.Tools.2.59.0\build\Grpc.Tools.targets')" />
+  <Import Project="..\..\packages\Google.Protobuf.Tools.3.30.2\build\Google.Protobuf.Tools.targets" Condition="Exists('..\..\packages\Google.Protobuf.Tools.3.30.2\build\Google.Protobuf.Tools.targets')" />
 </Project>
