--- a/gRPC/Client Examples/StimTherapyApp/StimTherapyApp.csproj
+++ b/gRPC/Client Examples/StimTherapyApp/StimTherapyApp.csproj
@@ -148,6 +148,9 @@
       <Name>BICgRPC_wpfLib</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\..\packages\Grpc.Core.2.46.6\build\net45\Grpc.Core.targets" Condition="Exists('..\..\packages\Grpc.Core.2.46.6\build\net45\Grpc.Core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
